# voxical

./: .gitignore  CMakeLists.txt  cmake_install.cmake  geotypes.h  gpurasterizer.h  main.cpp  makefile  opengl_test  rasterize_test  rasterize_test.cpp  slice.h  slice.py  testvox.py  triangulate.cpp  voxical.cpp  voxical.h  voxical.i  voxical.py  voxical_wrap.cxx
include/: geotypes.h  gpurasterizer.h  slice.h  stlparser.h
models/: zoya.stl
old/: 0.5mm.txt  2mm.txt  main.cpp  opengl_test.cpp  pyinterface.txt  triangulate.cpp  triangulate.h
src/: geotypes.h  gpurasterizer.h  slice.h  stlparser.h  voxical.cpp
